force-app/main/default/objects/Lv_Vehicule__c/Lv_Vehicule__c.object-meta.xml
<CustomObject>
    <label>Vehicule</label>
    <nameField>
        <label>Vehicule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>