force-app/main/default/objects/Lv_Vehicule__c/fields/Lv_Couleur__c.field-meta.xml
<CustomField>
    <fullName>Lv_Couleur__c</fullName>
    <label>Couleur</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>