force-app/main/default/objects/Lv_Vehicule__c/fields/Lv_Matricule__c.field-meta.xml
<CustomField>
    <fullName>Lv_Matricule__c</fullName>
    <label>Matricule</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>