force-app/main/default/objects/Lv_Vehicule__c/fields/Lv_Modele__c.field-meta.xml
<CustomField>
    <fullName>Lv_Modele__c</fullName>
    <label>Modele</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mercedes</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Dacia</fullName>
            </value>
            <value>
                <fullName>Renault</fullName>
            </value>
            <value>
                <fullName>Citroen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>